# letscountit-ui

./: pyproject.toml
.github/workflows/: python-app.yml
docker/: Dockerfile
docker/config/: gunicorn.py
letscountitui/: __init__.py  app.py
letscountitui/config/: __init__.py  config.py
letscountitui/routes/: counter_routes.py  home_routes.py
letscountitui/templates/: base.html  index.html
letscountitui/templates/counter/: create_counter.html  list_counters.html  one_counter.html  show_counter.html
letscountitui/tests/: conftest.py  test_counter_routes.py  test_home_routes.py
letscountitui/tests/utilities/: test_dataretrieval.py
letscountitui/utilities/: utils.py
tests/: conftest.py  test_counter_routes.py
